@@ -4,16 +4,15 @@ import static org.fedoraproject.javapackages.validator.TestCommon.assertFailOne;
 import static org.fedoraproject.javapackages.validator.TestCommon.assertPass;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import org.fedoraproject.javapackages.validator.TestCommon;
 import org.junit.jupiter.api.Test;
 
 public class JavaExclusiveArchValidatorTest {
-    private static final Path EA_ARCHFUL = TestCommon.SRPM_PATH_PREFIX.resolve(Paths.get("exclusive-arch-archful-1-1.src.rpm"));
-    private static final Path EA_NOARCH = TestCommon.SRPM_PATH_PREFIX.resolve(Paths.get("exclusive-arch-noarch-1-1.src.rpm"));
-    private static final Path EA_ARCHFUL_MISSING = TestCommon.SRPM_PATH_PREFIX.resolve(Paths.get("exclusive-arch-archful-missing-1-1.src.rpm"));
-    private static final Path EA_ARCHFUL_NOARCH = TestCommon.SRPM_PATH_PREFIX.resolve(Paths.get("exclusive-arch-archful-noarch-1-1.src.rpm"));
+    private static final Path EA_ARCHFUL = TestCommon.SRPM_PATH_PREFIX.resolve(Path.of("exclusive-arch-archful-1-1.src.rpm"));
+    private static final Path EA_NOARCH = TestCommon.SRPM_PATH_PREFIX.resolve(Path.of("exclusive-arch-noarch-1-1.src.rpm"));
+    private static final Path EA_ARCHFUL_MISSING = TestCommon.SRPM_PATH_PREFIX.resolve(Path.of("exclusive-arch-archful-missing-1-1.src.rpm"));
+    private static final Path EA_ARCHFUL_NOARCH = TestCommon.SRPM_PATH_PREFIX.resolve(Path.of("exclusive-arch-archful-noarch-1-1.src.rpm"));
 
     @Test
     public void testAllowedExclusiveArchArchful() throws Exception {
