@@ -3,9 +3,9 @@ package org.fedoraproject.javapackages.validator.validators;
 import static org.fedoraproject.javapackages.validator.TestCommon.assertFailOne;
 import static org.fedoraproject.javapackages.validator.TestCommon.assertPass;
 
-import java.nio.file.Paths;
-
 import org.easymock.EasyMock;
+
+import java.nio.file.Path;
 import org.fedoraproject.javapackages.validator.TestCommon;
 import org.fedoraproject.javapackages.validator.util.RpmFilesizeValidator;
 import org.junit.jupiter.api.BeforeEach;
@@ -21,7 +21,7 @@ public class RpmFilesizeValidatorTest {
     @BeforeEach
     public void setUp() throws Exception {
         rpm = new RpmPackage(
-                TestCommon.RPM_PATH_PREFIX.resolve(Paths.get("noarch/duplicate-file1-1-1.noarch.rpm")));
+                TestCommon.RPM_PATH_PREFIX.resolve(Path.of("noarch/duplicate-file1-1-1.noarch.rpm")));
         validator = EasyMock.createStrictMock(RpmFilesizeValidator.class);
     }
 
